Update presentations to conferences in index.html
Replaced presentations section with conferences section.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -63,8 +63,8 @@
             </div>
 
 
-            <div class="paper-presentations">
-              Presentations: {{ $item.presentations | markdownify | emojify }}
+            <div class="paper-conferences">
+              Conferences: {{ $item.conferences | markdownify | emojify }}
             </div>
 
 
